@@ -4,6 +4,7 @@
 	
 	"options_page_tab_title_welcome": { "message": "Bienvenue" }, 
 	"options_page_tab_title_options": { "message": "Options" }, 
+	"options_page_tab_title_notifications": { "message": "Notifications" }, 
 	
 	"options_page_tab_welcome_h1": { "message": "Merci d'avoir choisi Deezer Control!" },
 	"options_page_tab_welcome_content": { "message": "With it, you can quickly pause, resume or navigate through the music currently playing on Deezer. You'll no longer have to go back to the Deezer tab to watch that lolcat video! In its popup, it displays the album cover along with the the track's title and the artist's name. Several different styles can be chosen for the popup, to match everybody's needs. Want more? Drop me a line!" },
@@ -19,7 +20,10 @@
 	"options_page_tab_options_choose_style": { "message": "Choisissez le style" },
 	"options_page_tab_options_style_small": { "message": "petit" },
 	"options_page_tab_options_style_large": { "message": "grand" },
+	"options_page_tab_options_style_sideways" : { "message": "en largeur" }, 
 	"options_page_tab_options_button_save": { "message": "Enregistrer" },
+	
+	"options_page_tab_options_h1_notifications": { "message": "Notifications" }, 
 	
 	"options_page_footer_not_endorsed": { "message": "Deezer Control n'a aucun lien avec Deezer" },
 	"options_page_footer_contact": { "message": "Contact" }, 
