@@ -1,0 +1,81 @@
+@import url('../popup.css');
+
+#popup_display
+{
+	min-height: 80px;
+	min-width: 280px;
+	margin: 5px;
+}
+
+div#controls
+{
+	float: right;
+	height: 20px;
+	line-height: 20px;
+	position: absolute;
+	right: 5px;
+	top: 5px;
+}
+
+div#controls a 
+{ 
+	height: 10px;
+	margin-right: 5px; 
+}
+
+#control-settings
+{
+	background: url(/imgs/small/settings.png);
+	width: 10px;
+}
+
+#control-prev 
+{
+	background: url(/imgs/small/prev.png);
+	width: 17px;
+}
+
+#control-pause 
+{
+	background: url(/imgs/small/pause.png);
+	width: 10px;
+}
+
+#control-play 
+{
+	background: url(/imgs/small/play.png) no-repeat;
+	width: 10px;
+}
+
+#control-next 
+{
+	background: url(/imgs/small/next.png);
+	width: 17px;
+}
+
+#now_playing
+{
+	height: 80px;
+	width: 100%;
+}
+
+#now_playing_info
+{
+	margin-left: 90px;
+	height: 50px;
+	width: 190px;
+	text-align: left;
+}
+
+#now_playing_info_track
+{
+	font-size: 15px;
+	margin-bottom: 2px;
+}
+#now_playing_info_artist { font-size: 12px; }
+
+img#cover 
+{
+	height: 80px;
+	width: 80px;
+}
